tests/__snapshots__/validation-toBeInstantiableWith-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

   7 | describe("argument for 'source'", () => {
   8 |   test("must be provided", () => {
   9 |     expect().type.toBeInstantiableWith<[never]>();
     |     ~~~~~~
  10 |   });
  11 | 
  12 |   test.todo("must be a generic type", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:9:5

Error: Type argument for 'Target' must be provided.

  25 |   test("must be type argument", () => {
  26 |     // @ts-expect-error!
  27 |     expect<Single<_>>().type.toBeInstantiableWith(["one"]);
     |                                                   ~~~~~~~
  28 |   });
  29 | });
  30 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:27:51

Error: A type argument for 'Target' must be of a tuple type.

  36 |   test("must be a tuple type", () => {
  37 |     // @ts-expect-error!
  38 |     expect<Single<_>>().type.toBeInstantiableWith<string>();
     |                                                   ~~~~~~
  39 |   });
  40 | });
  41 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:38:51

